cmake_minimum_required(VERSION 3.5)
project(tiger)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    chap1/main.c
    chap1/makefile
    chap1/prog1.c
    chap1/prog1.h
    chap1/slp.c
    chap1/slp.h
    chap1/util.c
    chap1/util.h
    chap10/flowgraph.h
    chap10/graph.c
    chap10/graph.h
    chap11/color.h
    chap11/regalloc.h
    chap12/runtime.c
    chap2/driver.c
    chap2/errormsg.c
    chap2/errormsg.h
    chap2/makefile
    chap2/tiger.lex
    chap2/tokens.h
    chap2/util.c
    chap2/util.h
    chap3/errormsg.c
    chap3/errormsg.h
    chap3/lex.yy.c
    chap3/makefile
    chap3/parsetest.c
    chap3/tiger.grm
    chap3/util.c
    chap3/util.h
    chap3/y.output
    chap4/absyn.c
    chap4/absyn.h
    chap4/lex.yy.c
    chap4/makefile
    chap4/parse.c
    chap4/parse.h
    chap4/prabsyn.c
    chap4/prabsyn.h
    chap4/symbol.c
    chap4/symbol.h
    chap4/table.c
    chap4/table.h
    chap4/tiger.grm
    chap5/types.c
    chap5/types.h
    chap6/temp.c
    chap6/temp.h
    chap7/printtree.c
    chap7/printtree.h
    chap7/tree.c
    chap7/tree.h
    chap8/canon.c
    chap8/canon.h
    chap9/assem.c
    chap9/assem.h
    chap9/canon.c
    chap9/canon.h
    chap9/main.c
    testcases/merge.tig
    testcases/queens.tig
    testcases/test1.tig
    testcases/test10.tig
    testcases/test11.tig
    testcases/test12.tig
    testcases/test13.tig
    testcases/test14.tig
    testcases/test15.tig
    testcases/test16.tig
    testcases/test17.tig
    testcases/test18.tig
    testcases/test19.tig
    testcases/test2.tig
    testcases/test20.tig
    testcases/test21.tig
    testcases/test22.tig
    testcases/test23.tig
    testcases/test24.tig
    testcases/test25.tig
    testcases/test26.tig
    testcases/test27.tig
    testcases/test28.tig
    testcases/test29.tig
    testcases/test3.tig
    testcases/test30.tig
    testcases/test31.tig
    testcases/test32.tig
    testcases/test33.tig
    testcases/test34.tig
    testcases/test35.tig
    testcases/test36.tig
    testcases/test37.tig
    testcases/test38.tig
    testcases/test39.tig
    testcases/test4.tig
    testcases/test40.tig
    testcases/test41.tig
    testcases/test42.tig
    testcases/test43.tig
    testcases/test44.tig
    testcases/test45.tig
    testcases/test46.tig
    testcases/test47.tig
    testcases/test48.tig
    testcases/test49.tig
    testcases/test5.tig
    testcases/test6.tig
    testcases/test7.tig
    testcases/test8.tig
    testcases/test9.tig)

add_executable(tiger ${SOURCE_FILES})